# teste_212390-redTeam

firmware/share/: serial.h
mini-mendel/: x-axis-spacer_2off.stl
old_files/miscellaneous/CarapaceCopier/: .classpath  ReadMeFirst.txt
old_files/miscellaneous/Electronics/: extruder.sch  extruder_fwd.sch  xaxis-l298n.sch
old_files/miscellaneous/LiveCD-scripts/: Readme.txt
old_files/miscellaneous/autoconf-firmware-old/: Makefile.in  README
old_files/miscellaneous/autoconf-firmware-old/devices/extruder/: Makefile.am
old_files/miscellaneous/vertical_axis-v1/: lower_spider2.aoi
old_files/web/james-bom/: bom.php  home.html  sidebar.html
old_files/web/part-lister/: TODO
reprap/PHA/: Nodax30.ppt
reprap/electronics/: comms.sch  eagle_package_release  extruder.sch  extruder_fwd.sch  geda.prj  package_release  reprap.dcm  xaxis-2559.sch  xaxis-754410.sch  xaxis.sch  xaxis2.sch
reprap/electronics/Arduino/: reprap.lbr
reprap/electronics/Arduino-Sanguino/: arduino-sanguino-pinouts.ods  eagle_package_release  reprap.lbr
reprap/electronics/Comms_and_power_distribution/: $savepcb.000  (+13 more)
reprap/firmware/: Makefile  README  master.h  master1.c  master2.c  package_release  picmake.inc
reprap/host/: host-package-release
reprap/mechanics/: .project
trunk/mini-mendel/: x-bar-clamp_1off.stl
trunk/reprap/: make_release
users/ed/: GeometricProgression.java  Potential mods to code
users/erik/: 3D-to-5D-G-code.php
users/hoeken/: convert2pdf  solarbotics-gm3-gearmotor.dxf
users/kintel/: reprap.properties
users/metalab/: TODO.txt
users/phooky/: readme.txt
(+3672 files in other folders)
